hotfix: swagger config update
